<resources>
    <string name="app_name">Afters App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_home">Home</string>
    <string name="str_find">Find</string>
    <string name="str_host">Host</string>
    <string name="str_more">Profile</string>
    <string name="str_find_party">Find Party</string>
    <string name="str_host_party">Host Party</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="google_maps_key">AIzaSyCmFbvAOx6xGxBJBMrqnU57rIxa2dfwNMA</string>
    <string name="facebook_app_id">336232213386758</string>
    <string name="str_age">Age:</string>
    <string name="str_attending">Attending:</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="action_filter">Filter</string>
    <string name="str_radius">Radius</string>
    <string name="raduis_selected">Distance in km.</string>
    <string name="str_age_filter">Age</string>
    <string name="str_age_selected">Default age selected</string>
    <string name="show_result">Show result</string>
    <string name="reset_all_filters">Reset all filters</string>
    <string name="str_already_like">Attending the party, Confirmed!!</string>
    <string name="party_like_success">Attending the party, Confirmed!!</string>
    <string name="str_already_removed_fav">Removed from your favourites..</string>
    <string name="str_already_fav">It’s your favourite party now</string>
    <string name="party_removed_fav_success">Removed from your favourites..</string>
    <string name="party_add_fav_success">It’s your favourite party now</string>
    <string name="str_connect_internet">Please connect to internet…</string>
    <string name="str_err_no_party_in_location">There are currently no parties within your desired radius please check again soon.</string>
    <string name="please_wait">Please wait…</string>
    <string name="dlg_ok">Ok</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="select">Selected</string>
    <string name="str_name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="chat_empty_you_are_alone_here">Nobody is around yet…</string>
    <string name="chat_empty_start_new_chat">Start new chat</string>
    <string name="connection_error">Sorry, we lost connection to server  !!</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="chat_attachment">Attachment</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="chat_edit_text_hint">Message</string>
    <string name="chat_send">Send</string>
    <string name="removeAds">Remove Ads</string>
    <string name="str_purchase_msg">IF YOU ARE TIRED OF SEEING ADS YOU CAN UPGRADE
        WITH JUST \u00a31.99 AND YOU WILL NEVER HAVE TO SEE ANOTHER AD AGAIN</string>
    <string name="str_remove_ads">REMOVE ADS</string>

    <string name="banner_home_footer">ca-app-pub-1336083592322757/2867596220</string>
    <string name="msg_err">Server connection fails</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="chat_send_message_error">Failed to send message, please try again later..</string>
    <string name="dlg_choose_image_from">Select photo from…</string>
    <string name="dlg_loading">Loading...</string>
    <string name="notification_title">Aftersapp Chat notification</string>
    <string name="str_per_accept">Please allow the permission for chat</string>
    <string name="str_grant_permission">Allow the permission to send and receive images</string>
    <string name="interstial_ad_id">ca-app-pub-1336083592322757/4344329429</string>
    <string name="str_host_not_found">Host not available for chat</string>
    <string name="str_filter_apply">Result filters applied.</string>
    <string name="str_filter_reset">All Filters are reset to default</string>
    <string name="str_new_attachement">New attachment received</string>
    <string name="str_err_server_err">Server Error</string>
    <string name="str_err_server_msg">Something went wrong on server, please try again later..</string>
    <string name="str_err_try_again">Try again later..</string>
    <!--Music Genre -->
    <string name="str_music_alter">Alternative Music</string>
    <string name="str_music_blues">Blues</string>
    <string name="str_music_classical">Classical Music</string>
    <string name="str_music_country">Country Music</string>
    <string name="str_music_dance">Dance Music</string>
    <string name="str_music_easy">Easy Listening</string>
    <string name="str_music_electronic">Electronic Music</string>
    <string name="str_music_house">House</string>
    <string name="str_music_hip_hop">Hip Hop / Rap</string>
    <string name="str_music_indie">Indie Pop</string>
    <string name="str_music_jazz">Jazz</string>
    <string name="str_music_latin">Latin Music</string>
    <string name="str_music_new_age">New Age</string>
    <string name="str_music_opera">Opera</string>
    <string name="str_music_pop">Pop</string>
    <string name="str_music_r_n_b">R&amp;B / Soul</string>
    <string name="str_music_reggae">Reggae</string>
    <string name="str_music_rock">Rock</string>
    <string name="str_music_techno">Techno</string>
    <string name="str_music_beat">World Music / Beats</string>
    <string name="str_music_validation">--Please select music genre--</string>
    <string name="str_party_attending">Party Attending</string>
    <string name="str_party_age">Age</string>
    <string name="str_party_Address">Party Address</string>
    <string name="str_chat_with_host">Chat With Host</string>
    <string name="str_attend_party">Attend Party </string>
    <string name="str_add_favourites">Add To Favourites</string>
    <string name="str_add_party_direction">Get directions</string>

    <string name="str_err_not_attending_any_party">Not attending any party</string>
    <string name="str_err_no_fav_party">No favourite party</string>
    <string name="str_err_no_host_party">You are not hosting any party</string>
    <string name="str_edit_party">Edit</string>
    <string name="str_no_music_selected">Not selected</string>
    <string name="str_date">Date</string>
    <string name="date_selected">No date selected</string>
    <string name="str_edit">Edit</string>
    <string name="str_user_not_updated_try_again">User is not updated try again...</string>
    <string name="str_user_updated">Profile updated successfully</string>
    <!--Host party -->
    <string name="str_party_date_title">Party Date</string>
    <string name="str_party_date_descr">Click here for Party date</string>
    <string name="str_party_time_title">Party Time</string>
    <string name="str_party_time_descr">Click here for Party time</string>
    <string name="title_activity_disclaimer">DisclaimerActivity</string>
    <string name="str_msg_no_direction_msg">No direction found</string>
    <string name="str_no_direction_found">Direction is not found on given location</string>
    <string name="str_delete">Delete</string>
    <string name="party_delete_success">Deleted successfully !!</string>

    <!--user SignUp-->
    <string name="str_first_name_hint">User Name</string>
    <string name="str_email_hint">Email Id</string>
    <string name="str_password_hint">Password</string>
    <string name="str_register_hint">Sign Up</string>
    <string name="str_dob_hint">Date of Birth</string>
    <string name="str_first_validation">Please enter user name</string>
    <string name="str_emailId_validation">Please enter email Id</string>
    <string name="str_emailId_invalid">Invalid email Id</string>
    <string name="str_password_validation">Please enter your password</string>
    <string name="str_dob_validation">Please select you birth date</string>
    <string name="str_signup_user_title">Sign up user</string>

    <!--user Sign in-->
    <string name="str_user_name_hint">Email Id</string>
    <string name="str_user_password">Password</string>
    <string name="str_login_btn">Login</string>
    <string name="str_user_forgot_password">Forgot Password</string>
    <string name="str_new_user">New to aftersapp ?</string>
    <string name="str_create_acc">Create account</string>
    <string name="txt_error_email">Please enter email id</string>
    <string name="txt_error_pass">Please enter password</string>
    <string name="str_forgot_pwd_hint">Enter email Id</string>
    <string name="str_resend_btn">Resend my password</string>
    <string name="str_loc_hidden">Hidden</string>
    <string name="str_error_attend_title">Attend Party</string>
    <string name="str_errorattend_party_msg">To get directions, you have to attend party</string>
    <string name="str_error_direction">Could not calculate directions</string>
</resources>
