<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutFindParty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/findPartyTabBack"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <com.aftersapp.views.OpenSansRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_find_party"
                android:textColor="@android:color/white"
                android:layout_marginLeft="14dp"
                android:textSize="30sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_keyboard_arrow_right_white_36dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutHostParty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/hostTabBack"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <com.aftersapp.views.OpenSansRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_host_party"
                android:layout_marginLeft="14dp"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_keyboard_arrow_right_white_36dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEditProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/editProfTabBack"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <com.aftersapp.views.OpenSansRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_edit_profile"
                android:layout_marginLeft="14dp"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_keyboard_arrow_right_white_36dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
