<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context="com.aftersapp.activities.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginBackgroundTransperant">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_weight="1"
                    android:src="@drawable/after_logo_white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/userNameLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/custom_white_border"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_userNamedEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColorHint="@android:color/white">

                            <EditText
                                android:id="@+id/userNameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:drawablePadding="10dp"
                                android:hint="@string/str_first_name_hint"
                                android:inputType="text"
                                android:paddingStart="5dp"
                                android:singleLine="true"
                                android:textColor="@android:color/white"
                                android:textColorHint="@android:color/white"
                                android:textSize="16sp"
                                />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/emailLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_white_border"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColorHint="@android:color/white">

                            <EditText
                                android:id="@+id/emailIdEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:drawablePadding="10dp"
                                android:hint="@string/str_email_hint"
                                android:inputType="textEmailAddress"
                                android:paddingStart="5dp"
                                android:singleLine="true"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"/>

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/passwordLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_white_border"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColorHint="@android:color/white">

                            <EditText
                                android:id="@+id/passwordEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:drawablePadding="10dp"
                                android:hint="@string/str_password_hint"
                                android:inputType="textPassword"
                                android:paddingStart="5dp"
                                android:singleLine="true"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>



                    <LinearLayout
                        android:id="@+id/dateOfBirthLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_white_border"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_DOBEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColorHint="@android:color/white">

                            <EditText
                                android:id="@+id/dateOfBirthEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:drawablePadding="10dp"
                                android:hint="@string/str_dob_hint"
                                android:inputType="text"
                                android:paddingStart="5dp"
                                android:singleLine="true"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/transparent"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:weightSum="3">


                        <Button
                            android:id="@+id/signUp_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/custom_white_border"
                            android:text="@string/str_register_hint"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </ScrollView>


</FrameLayout>
